# Smart-Teleprompter

./: .gitignore  LICENSE  README.md  pyproject.toml  範本_QA問答庫.md  範本_中英混合.txt
scripts/: build.py  install.ps1  run_teleprompter.py
scripts/hooks/: hook-webrtcvad.py
src/teleprompter/: __init__.py  config.py  main.py
src/teleprompter/core/: __init__.py  alignment_engine.py  annotations.py  audio_capture.py  pdf_renderer.py  pptx_converter.py  qa_library.py  recorder.py  rich_text_format.py  session.py  speech_recognizer.py  text_utils.py  timer_controller.py  transcript_loader.py  translator.py  video_encoder.py
src/teleprompter/resources/: styles.qss
src/teleprompter/ui/: __init__.py  main_window.py  page_divider_overlay.py  prompter_view.py  qa_panel.py  record_source_dialog.py  session_tab_bar.py  settings_dialog.py  slide_mode_view.py  slide_preview.py  (+1 more)
tests/: test_alignment.py  test_annotations.py  test_click_to_edit.py  test_e2e_speaker_scenarios.py  test_edit_mode_scroll.py  test_enterprise_grade.py  test_format_spread_regression.py  test_format_without_edit_mode.py  test_integration.py  test_live_rehearsal.py  test_paranoid_presenter.py  test_pdf_renderer.py  test_pptx_converter.py  test_presenter_scenarios.py  test_prompter_view.py  test_qa_library.py  test_recorder.py  test_rich_text_format.py  test_robustness.py  test_session.py  test_slide_preview.py  test_streaming_localagreement.py  test_streaming_worker.py  test_strict_speaker_qa.py  test_text_utils.py  test_timer_controller.py  test_transcript_loader.py  test_video_encoder.py  test_view_modes.py
